--- a/_posts/2011-09-07-Simple.md
+++ b/_posts/2011-09-07-Simple.md
@@ -5,18 +5,20 @@ category: note
 excerpt: What is simple
 ---
 
-### Simple things
+### 定义:
 
 1. Reliable Predictable
 2. Cheap
 3. High Performance or Value/Cost
 4. Building Blocks
 
+### 俗语:
+
 * Every things should be made as simple as possible, but not simpler.
 
 * You know you've achieved perfection in design, not when you have nothing to add, but when you have nothing more to take away.
 
 
-### Software
+### 关于软件:
 
 * UNIX
