add slide address

--- a/_posts/2011-10-13-Ruby-new.md
+++ b/_posts/2011-10-13-Ruby-new.md
@@ -4,6 +4,10 @@ title: Ruby.new
 category: note
 excerpt: share some ruby basic knowleage
 ---
+### 同步slide地址:
+
+[Ruby.new](http://saito.im/slide/ruby-new.html)
+
 ### helloworld
 标配版:
     print "helloworld"
