fix a link position

--- a/_posts/2011-10-13-Ruby-new.md
+++ b/_posts/2011-10-13-Ruby-new.md
@@ -4,9 +4,7 @@ title: Ruby.new
 category: note
 excerpt: share some ruby basic knowleage
 ---
-### 同步slide地址:
-
-[Ruby.new](http://saito.im/slide/ruby-new.html)
+### 同步slide地址 :   [Ruby.new](http://saito.im/slide/ruby-new.html)
 
 ### helloworld
 标配版:
