--- a/_posts/2011-10-13-Ruby-new.md
+++ b/_posts/2011-10-13-Ruby-new.md
@@ -273,7 +273,7 @@ interface怎么写:
     Pig.new.eat
     Pig.new.sleep
 
-module variable访问:
+module constant访问:
 
     module Math
       PI = 3.14
@@ -281,7 +281,7 @@ module variable访问:
     
     Math::PI
 
-module include module:
+module namespace:
 
     module Foo
       module Bar
@@ -293,7 +293,7 @@ module include module:
     
     Foo::Bar.say
 
-module include class:
+anothor module namespace:
 
     module Foo
       class Bar
