fix knowledge typo

--- a/_posts/2011-10-13-Ruby-new.md
+++ b/_posts/2011-10-13-Ruby-new.md
@@ -2,7 +2,7 @@
 layout: post
 title: Ruby.new
 category: work
-excerpt: share some ruby basic knowleage
+excerpt: share some ruby basic knowledge
 thumb: 0K031z2F370f3v1L3f3F/Screen%20Shot%202012-08-06%20at%2012.02.40%20PM.png
 presentation: /slide/ruby-new.html
 ---
